// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenAPI upgrade risk gate oas3-basic-operation-ids 1`] = `
[
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [],
    "id": "usersDelete",
    "method": "DELETE",
    "name": "users Delete",
    "parent": "Users",
    "pathRef": "DELETE::/users/{id}",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 2,
  },
  {
    "authType": "bearer",
    "bodyMode": null,
    "headerKeys": [],
    "id": "usersList",
    "method": "GET",
    "name": "users List",
    "parent": "Users",
    "pathRef": "GET::/users",
    "preRequestLines": 0,
    "queryParamKeys": [
      "limit",
    ],
    "testLines": 3,
  },
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [
      "Accept",
    ],
    "id": "usersOne",
    "method": "GET",
    "name": "users One",
    "parent": "Users",
    "pathRef": "GET::/users/{id}",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 3,
  },
  {
    "authType": null,
    "bodyMode": "raw",
    "headerKeys": [
      "Content-Type",
    ],
    "id": "usersUpdate",
    "method": "PATCH",
    "name": "users Update",
    "parent": "Users",
    "pathRef": "PATCH::/users/{id}",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 2,
  },
  {
    "authType": "apikey",
    "bodyMode": "raw",
    "headerKeys": [
      "Content-Type",
    ],
    "id": "usersCreate",
    "method": "POST",
    "name": "users Create",
    "parent": "Users",
    "pathRef": "POST::/users",
    "preRequestLines": 1,
    "queryParamKeys": [],
    "testLines": 3,
  },
]
`;

exports[`OpenAPI upgrade risk gate oas3-basic-operation-ids 2`] = `
{
  "_": {},
  "event": [],
  "info": {
    "description": {
      "content": "",
      "type": "text/plain",
    },
    "name": "Upgrade OAS3 Basic",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": {
      "build": [],
      "major": 1,
      "minor": 0,
      "patch": 0,
      "prerelease": [],
      "raw": "<number>.<number>.<number>",
      "string": "1.0.0",
    },
  },
  "item": [
    {
      "description": {
        "content": "",
        "type": "text/plain",
      },
      "event": [],
      "item": [
        {
          "event": [
            {
              "listen": "test",
              "script": {
                "exec": [
                  "// Validate status 2xx 
pm.test("[GET]::/users - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
                  "// Validate response status code 
pm.test("[GET]::/users - Response status code is 200", function () {
    pm.expect(pm.response.code).to.equal(200);
});",
                  "// Validate if response header has matching content-type
pm.test("[GET]::/users - Content-Type is application/json", function () {
   pm.expect(pm.response.headers.get("Content-Type")).to.include("application/json");
});",
                ],
                "type": "text/javascript",
              },
            },
          ],
          "name": "users List",
          "protocolProfileBehavior": {
            "disableBodyPruning": true,
          },
          "request": {
            "auth": {
              "bearer": [
                {
                  "key": "token",
                  "type": "any",
                  "value": "{{bearerToken}}",
                },
              ],
              "type": "bearer",
            },
            "body": {},
            "description": {
              "type": "text/plain",
            },
            "method": "GET",
            "name": "users List",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "users",
              ],
              "query": [
                {
                  "description": {
                    "content": "",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "limit",
                  "value": "25",
                },
              ],
              "variable": [],
            },
          },
          "response": [],
        },
        {
          "event": [
            {
              "listen": "test",
              "script": {
                "exec": [
                  "// Validate status 2xx 
pm.test("[POST]::/users - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
                  "// Validate response status code 
pm.test("[POST]::/users - Response status code is 201", function () {
    pm.expect(pm.response.code).to.equal(201);
});",
                  "// Validate if response header has matching content-type
pm.test("[POST]::/users - Content-Type is application/json", function () {
   pm.expect(pm.response.headers.get("Content-Type")).to.include("application/json");
});",
                ],
                "type": "text/javascript",
              },
            },
            {
              "listen": "prerequest",
              "script": {
                "exec": [
                  "pm.collectionVariables.set('upgradeGate', 'usersCreate')",
                ],
                "type": "text/javascript",
              },
            },
          ],
          "name": "users Create",
          "protocolProfileBehavior": {
            "disableBodyPruning": true,
          },
          "request": {
            "auth": {
              "apikey": [
                {
                  "key": "key",
                  "type": "any",
                  "value": "X-API-Key",
                },
                {
                  "key": "value",
                  "type": "any",
                  "value": "{{apiKey}}",
                },
                {
                  "key": "in",
                  "type": "any",
                  "value": "header",
                },
              ],
              "type": "apikey",
            },
            "body": {
              "mode": "raw",
              "options": {
                "raw": {
                  "headerFamily": "json",
                  "language": "json",
                },
              },
              "raw": {
                "name": "Upgrade Gate User",
              },
            },
            "description": {
              "type": "text/plain",
            },
            "header": [
              {
                "key": "Content-Type",
                "value": "application/json",
              },
            ],
            "method": "POST",
            "name": "users Create",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "users",
              ],
              "query": [],
              "variable": [],
            },
          },
          "response": [],
        },
        {
          "event": [
            {
              "listen": "test",
              "script": {
                "exec": [
                  "// Validate status 2xx 
pm.test("[GET]::/users/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
                  "// Validate response status code 
pm.test("[GET]::/users/:id - Response status code is 200", function () {
    pm.expect(pm.response.code).to.equal(200);
});",
                  "// Validate if response header has matching content-type
pm.test("[GET]::/users/:id - Content-Type is application/json", function () {
   pm.expect(pm.response.headers.get("Content-Type")).to.include("application/json");
});",
                ],
                "type": "text/javascript",
              },
            },
          ],
          "name": "users One",
          "protocolProfileBehavior": {
            "disableBodyPruning": true,
          },
          "request": {
            "body": {},
            "description": {
              "type": "text/plain",
            },
            "header": [
              {
                "key": "Accept",
                "value": "application/json",
              },
            ],
            "method": "GET",
            "name": "users One",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "users",
                ":id",
              ],
              "query": [],
              "variable": [
                {
                  "description": {
                    "content": "(Required) ",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "user_1",
                },
              ],
            },
          },
          "response": [
            {
              "_": {
                "postman_previewlanguage": "json",
              },
              "body": "{
  "id": "user_1",
  "name": "Jane"
}",
              "code": 200,
              "cookie": [],
              "header": [
                {
                  "key": "Content-Type",
                  "value": "application/json",
                },
              ],
              "name": "ok",
              "originalRequest": {
                "body": {},
                "header": [
                  {
                    "key": "Accept",
                    "value": "application/json",
                  },
                ],
                "method": "GET",
                "url": {
                  "host": [
                    "{{baseUrl}}",
                  ],
                  "path": [
                    "users",
                    ":id",
                  ],
                  "query": [],
                  "variable": [
                    {
                      "description": {
                        "content": "(Required) ",
                        "type": "text/plain",
                      },
                      "disabled": false,
                      "key": "id",
                      "type": "any",
                      "value": "user_1",
                    },
                  ],
                },
              },
              "status": "OK",
            },
          ],
        },
        {
          "event": [
            {
              "listen": "test",
              "script": {
                "exec": [
                  "// Validate status 2xx 
pm.test("[PATCH]::/users/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
                  "// Validate response status code 
pm.test("[PATCH]::/users/:id - Response status code is 200", function () {
    pm.expect(pm.response.code).to.equal(200);
});",
                ],
                "type": "text/javascript",
              },
            },
          ],
          "name": "users Update",
          "protocolProfileBehavior": {
            "disableBodyPruning": true,
          },
          "request": {
            "body": {
              "mode": "raw",
              "options": {
                "raw": {
                  "headerFamily": "json",
                  "language": "json",
                },
              },
              "raw": {
                "name": "Jane Updated",
              },
            },
            "description": {
              "type": "text/plain",
            },
            "header": [
              {
                "key": "Content-Type",
                "value": "application/json",
              },
            ],
            "method": "PATCH",
            "name": "users Update",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "users",
                ":id",
              ],
              "query": [],
              "variable": [
                {
                  "description": {
                    "content": "(Required) ",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "user_1",
                },
              ],
            },
          },
          "response": [
            {
              "_": {
                "postman_previewlanguage": "text",
              },
              "code": 200,
              "cookie": [],
              "header": [],
              "name": "updated",
              "originalRequest": {
                "body": {
                  "mode": "raw",
                  "options": {
                    "raw": {
                      "headerFamily": "json",
                      "language": "json",
                    },
                  },
                  "raw": {
                    "name": "Jane Updated",
                  },
                },
                "header": [
                  {
                    "key": "Content-Type",
                    "value": "application/json",
                  },
                ],
                "method": "PATCH",
                "url": {
                  "host": [
                    "{{baseUrl}}",
                  ],
                  "path": [
                    "users",
                    ":id",
                  ],
                  "query": [],
                  "variable": [
                    {
                      "description": {
                        "content": "(Required) ",
                        "type": "text/plain",
                      },
                      "disabled": false,
                      "key": "id",
                      "type": "any",
                      "value": "user_1",
                    },
                  ],
                },
              },
              "status": "OK",
            },
          ],
        },
        {
          "event": [
            {
              "listen": "test",
              "script": {
                "exec": [
                  "// Validate status 2xx 
pm.test("[DELETE]::/users/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
                  "// Validate response status code 
pm.test("[DELETE]::/users/:id - Response status code is 204", function () {
    pm.expect(pm.response.code).to.equal(204);
});",
                ],
                "type": "text/javascript",
              },
            },
          ],
          "name": "users Delete",
          "protocolProfileBehavior": {
            "disableBodyPruning": true,
          },
          "request": {
            "body": {},
            "description": {
              "type": "text/plain",
            },
            "method": "DELETE",
            "name": "users Delete",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "users",
                ":id",
              ],
              "query": [],
              "variable": [
                {
                  "description": {
                    "content": "(Required) ",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "user_1",
                },
              ],
            },
          },
          "response": [
            {
              "_": {
                "postman_previewlanguage": "text",
              },
              "code": 204,
              "cookie": [],
              "header": [],
              "name": "deleted",
              "originalRequest": {
                "body": {},
                "method": "DELETE",
                "url": {
                  "host": [
                    "{{baseUrl}}",
                  ],
                  "path": [
                    "users",
                    ":id",
                  ],
                  "query": [],
                  "variable": [
                    {
                      "description": {
                        "content": "(Required) ",
                        "type": "text/plain",
                      },
                      "disabled": false,
                      "key": "id",
                      "type": "any",
                      "value": "user_1",
                    },
                  ],
                },
              },
              "status": "No Content",
            },
          ],
        },
      ],
      "name": "Users",
    },
  ],
  "variable": [
    {
      "key": "version",
      "type": "any",
      "value": "v1",
    },
    {
      "key": "baseUrl",
      "type": "any",
      "value": "https://api.example.com/{{version}}",
    },
  ],
}
`;

exports[`OpenAPI upgrade risk gate oas3-cookie-params 1`] = `
[
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [
      "Accept",
    ],
    "id": "profileByCookie",
    "method": "GET",
    "name": "profile By Cookie",
    "parent": "Upgrade Cookie Params",
    "pathRef": "GET::/profile",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 1,
  },
]
`;

exports[`OpenAPI upgrade risk gate oas3-cookie-params 2`] = `
{
  "_": {},
  "event": [],
  "info": {
    "description": {
      "content": "",
      "type": "text/plain",
    },
    "name": "Upgrade Cookie Params",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": {
      "build": [],
      "major": 1,
      "minor": 0,
      "patch": 0,
      "prerelease": [],
      "raw": "<number>.<number>.<number>",
      "string": "1.0.0",
    },
  },
  "item": [
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[GET]::/profile - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "profile By Cookie",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {},
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "key": "Accept",
            "value": "application/json",
          },
        ],
        "method": "GET",
        "name": "profile By Cookie",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "profile",
          ],
          "query": [],
          "variable": [],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "json",
          },
          "body": "{
  "id": "user_1"
}",
          "code": 200,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/json",
            },
          ],
          "name": "ok",
          "originalRequest": {
            "body": {},
            "header": [
              {
                "key": "Accept",
                "value": "application/json",
              },
            ],
            "method": "GET",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "profile",
              ],
              "query": [],
              "variable": [],
            },
          },
          "status": "OK",
        },
      ],
    },
  ],
  "variable": [
    {
      "key": "baseUrl",
      "type": "any",
      "value": "/",
    },
  ],
}
`;

exports[`OpenAPI upgrade risk gate oas3-deepobject-params 1`] = `
[
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [
      "Accept",
    ],
    "id": "searchDeepObject",
    "method": "GET",
    "name": "search Deep Object",
    "parent": "Upgrade DeepObject",
    "pathRef": "GET::/search",
    "preRequestLines": 0,
    "queryParamKeys": [
      "filter[limit]",
      "filter[status]",
    ],
    "testLines": 1,
  },
]
`;

exports[`OpenAPI upgrade risk gate oas3-deepobject-params 2`] = `
{
  "_": {},
  "event": [],
  "info": {
    "description": {
      "content": "",
      "type": "text/plain",
    },
    "name": "Upgrade DeepObject",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": {
      "build": [],
      "major": 1,
      "minor": 0,
      "patch": 0,
      "prerelease": [],
      "raw": "<number>.<number>.<number>",
      "string": "1.0.0",
    },
  },
  "item": [
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[GET]::/search - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "search Deep Object",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {},
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "key": "Accept",
            "value": "application/json",
          },
        ],
        "method": "GET",
        "name": "search Deep Object",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "search",
          ],
          "query": [
            {
              "description": {
                "content": "",
                "type": "text/plain",
              },
              "disabled": false,
              "key": "filter[status]",
              "value": "open",
            },
            {
              "description": {
                "content": "",
                "type": "text/plain",
              },
              "disabled": false,
              "key": "filter[limit]",
              "value": "10",
            },
          ],
          "variable": [],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "json",
          },
          "body": "{
  "ok": true
}",
          "code": 200,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/json",
            },
          ],
          "name": "ok",
          "originalRequest": {
            "body": {},
            "header": [
              {
                "key": "Accept",
                "value": "application/json",
              },
            ],
            "method": "GET",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "search",
              ],
              "query": [
                {
                  "description": {
                    "content": "",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "filter[status]",
                  "value": "open",
                },
                {
                  "description": {
                    "content": "",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "filter[limit]",
                  "value": "10",
                },
              ],
              "variable": [],
            },
          },
          "status": "OK",
        },
      ],
    },
  ],
  "variable": [
    {
      "key": "baseUrl",
      "type": "any",
      "value": "/",
    },
  ],
}
`;

exports[`OpenAPI upgrade risk gate oas3-local-refs 1`] = `
[
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [
      "Accept",
    ],
    "id": "thingsOne",
    "method": "GET",
    "name": "things One",
    "parent": "Upgrade Local Refs",
    "pathRef": "GET::/things/{id}",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 1,
  },
  {
    "authType": null,
    "bodyMode": "raw",
    "headerKeys": [
      "Accept",
      "Content-Type",
      "x-upgrade-gate",
    ],
    "id": "thingsCreate",
    "method": "POST",
    "name": "things Create",
    "parent": "Upgrade Local Refs",
    "pathRef": "POST::/things",
    "preRequestLines": 1,
    "queryParamKeys": [],
    "testLines": 1,
  },
]
`;

exports[`OpenAPI upgrade risk gate oas3-local-refs 2`] = `
{
  "_": {},
  "event": [],
  "info": {
    "description": {
      "content": "",
      "type": "text/plain",
    },
    "name": "Upgrade Local Refs",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": {
      "build": [],
      "major": 1,
      "minor": 0,
      "patch": 0,
      "prerelease": [],
      "raw": "<number>.<number>.<number>",
      "string": "1.0.0",
    },
  },
  "item": [
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[POST]::/things - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
        {
          "listen": "prerequest",
          "script": {
            "exec": [
              "pm.collectionVariables.set('upgradeGate', 'postOperation')",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "things Create",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {
          "mode": "raw",
          "options": {
            "raw": {
              "headerFamily": "json",
              "language": "json",
            },
          },
          "raw": {
            "type": "widget",
          },
        },
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "disabled": false,
            "key": "x-upgrade-gate",
            "value": "true",
          },
          {
            "key": "Accept",
            "value": "application/json",
          },
          {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "method": "POST",
        "name": "things Create",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "things",
          ],
          "query": [],
          "variable": [],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "json",
          },
          "body": "{
  "id": "thing_1",
  "type": "widget"
}",
          "code": 201,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/json",
            },
          ],
          "name": "created",
          "originalRequest": {
            "body": {
              "mode": "raw",
              "options": {
                "raw": {
                  "headerFamily": "json",
                  "language": "json",
                },
              },
              "raw": {
                "type": "widget",
              },
            },
            "header": [
              {
                "key": "Accept",
                "value": "application/json",
              },
              {
                "key": "Content-Type",
                "value": "application/json",
              },
            ],
            "method": "POST",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "things",
              ],
              "query": [],
              "variable": [],
            },
          },
          "status": "Created",
        },
      ],
    },
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[GET]::/things/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "things One",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {},
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "key": "Accept",
            "value": "application/json",
          },
        ],
        "method": "GET",
        "name": "things One",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "things",
            ":id",
          ],
          "query": [],
          "variable": [
            {
              "description": {
                "content": "(Required) ",
                "type": "text/plain",
              },
              "disabled": false,
              "key": "id",
              "type": "any",
              "value": "thing_1",
            },
          ],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "json",
          },
          "body": "{
  "id": "thing_1",
  "type": "widget"
}",
          "code": 200,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/json",
            },
          ],
          "name": "ok",
          "originalRequest": {
            "body": {},
            "header": [
              {
                "key": "Accept",
                "value": "application/json",
              },
            ],
            "method": "GET",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "things",
                ":id",
              ],
              "query": [],
              "variable": [
                {
                  "description": {
                    "content": "(Required) ",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "thing_1",
                },
              ],
            },
          },
          "status": "OK",
        },
      ],
    },
  ],
  "variable": [
    {
      "key": "baseUrl",
      "type": "any",
      "value": "/",
    },
  ],
}
`;

exports[`OpenAPI upgrade risk gate oas3-no-operation-ids-fallback 1`] = `
[
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [],
    "id": null,
    "method": "GET",
    "name": "/orders",
    "parent": "Orders",
    "pathRef": "GET::/orders",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 0,
  },
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [],
    "id": null,
    "method": "GET",
    "name": "/orders/:id",
    "parent": "Orders",
    "pathRef": "GET::/orders/{id}",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 1,
  },
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [],
    "id": null,
    "method": "PATCH",
    "name": "/orders/:id",
    "parent": "Orders",
    "pathRef": "PATCH::/orders/{id}",
    "preRequestLines": 1,
    "queryParamKeys": [],
    "testLines": 1,
  },
  {
    "authType": null,
    "bodyMode": "raw",
    "headerKeys": [
      "Content-Type",
    ],
    "id": null,
    "method": "POST",
    "name": "/orders",
    "parent": "Orders",
    "pathRef": "POST::/orders",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 0,
  },
]
`;

exports[`OpenAPI upgrade risk gate oas3-no-operation-ids-fallback 2`] = `
{
  "_": {},
  "event": [],
  "info": {
    "description": {
      "content": "",
      "type": "text/plain",
    },
    "name": "Upgrade No OperationId",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": {
      "build": [],
      "major": 1,
      "minor": 0,
      "patch": 0,
      "prerelease": [],
      "raw": "<number>.<number>.<number>",
      "string": "1.0.0",
    },
  },
  "item": [
    {
      "description": {
        "content": "",
        "type": "text/plain",
      },
      "event": [],
      "item": [
        {
          "event": [],
          "name": "/orders",
          "protocolProfileBehavior": {
            "disableBodyPruning": true,
          },
          "request": {
            "body": {},
            "description": {
              "type": "text/plain",
            },
            "method": "GET",
            "name": "/orders",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "orders",
              ],
              "query": [],
              "variable": [],
            },
          },
          "response": [
            {
              "_": {
                "postman_previewlanguage": "text",
              },
              "code": 200,
              "cookie": [],
              "header": [],
              "name": "ok",
              "originalRequest": {
                "body": {},
                "method": "GET",
                "url": {
                  "host": [
                    "{{baseUrl}}",
                  ],
                  "path": [
                    "orders",
                  ],
                  "query": [],
                  "variable": [],
                },
              },
              "status": "OK",
            },
          ],
        },
        {
          "event": [],
          "name": "/orders",
          "protocolProfileBehavior": {
            "disableBodyPruning": true,
          },
          "request": {
            "body": {
              "mode": "raw",
              "options": {
                "raw": {
                  "headerFamily": "json",
                  "language": "json",
                },
              },
              "raw": {
                "sku": "ORDER-123",
              },
            },
            "description": {
              "type": "text/plain",
            },
            "header": [
              {
                "key": "Content-Type",
                "value": "application/json",
              },
            ],
            "method": "POST",
            "name": "/orders",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "orders",
              ],
              "query": [],
              "variable": [],
            },
          },
          "response": [
            {
              "_": {
                "postman_previewlanguage": "text",
              },
              "code": 201,
              "cookie": [],
              "header": [],
              "name": "created",
              "originalRequest": {
                "body": {
                  "mode": "raw",
                  "options": {
                    "raw": {
                      "headerFamily": "json",
                      "language": "json",
                    },
                  },
                  "raw": {
                    "sku": "ORDER-123",
                  },
                },
                "header": [
                  {
                    "key": "Content-Type",
                    "value": "application/json",
                  },
                ],
                "method": "POST",
                "url": {
                  "host": [
                    "{{baseUrl}}",
                  ],
                  "path": [
                    "orders",
                  ],
                  "query": [],
                  "variable": [],
                },
              },
              "status": "Created",
            },
          ],
        },
        {
          "event": [
            {
              "listen": "test",
              "script": {
                "exec": [
                  "// Validate status 2xx 
pm.test("[GET]::/orders/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
                ],
                "type": "text/javascript",
              },
            },
          ],
          "name": "/orders/:id",
          "protocolProfileBehavior": {
            "disableBodyPruning": true,
          },
          "request": {
            "body": {},
            "description": {
              "type": "text/plain",
            },
            "method": "GET",
            "name": "/orders/:id",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "orders",
                ":id",
              ],
              "query": [],
              "variable": [
                {
                  "description": {
                    "content": "(Required) ",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "order_1",
                },
              ],
            },
          },
          "response": [
            {
              "_": {
                "postman_previewlanguage": "text",
              },
              "code": 200,
              "cookie": [],
              "header": [],
              "name": "ok",
              "originalRequest": {
                "body": {},
                "method": "GET",
                "url": {
                  "host": [
                    "{{baseUrl}}",
                  ],
                  "path": [
                    "orders",
                    ":id",
                  ],
                  "query": [],
                  "variable": [
                    {
                      "description": {
                        "content": "(Required) ",
                        "type": "text/plain",
                      },
                      "disabled": false,
                      "key": "id",
                      "type": "any",
                      "value": "order_1",
                    },
                  ],
                },
              },
              "status": "OK",
            },
          ],
        },
        {
          "event": [
            {
              "listen": "test",
              "script": {
                "exec": [
                  "// Validate status 2xx 
pm.test("[PATCH]::/orders/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
                ],
                "type": "text/javascript",
              },
            },
            {
              "listen": "prerequest",
              "script": {
                "exec": [
                  "pm.collectionVariables.set('upgradeGate', 'ordersPatch')",
                ],
                "type": "text/javascript",
              },
            },
          ],
          "name": "/orders/:id",
          "protocolProfileBehavior": {
            "disableBodyPruning": true,
          },
          "request": {
            "body": {},
            "description": {
              "type": "text/plain",
            },
            "method": "PATCH",
            "name": "/orders/:id",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "orders",
                ":id",
              ],
              "query": [],
              "variable": [
                {
                  "description": {
                    "content": "(Required) ",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "order_1",
                },
              ],
            },
          },
          "response": [
            {
              "_": {
                "postman_previewlanguage": "text",
              },
              "code": 200,
              "cookie": [],
              "header": [],
              "name": "updated",
              "originalRequest": {
                "body": {},
                "method": "PATCH",
                "url": {
                  "host": [
                    "{{baseUrl}}",
                  ],
                  "path": [
                    "orders",
                    ":id",
                  ],
                  "query": [],
                  "variable": [
                    {
                      "description": {
                        "content": "(Required) ",
                        "type": "text/plain",
                      },
                      "disabled": false,
                      "key": "id",
                      "type": "any",
                      "value": "order_1",
                    },
                  ],
                },
              },
              "status": "OK",
            },
          ],
        },
      ],
      "name": "Orders",
    },
  ],
  "variable": [
    {
      "key": "baseUrl",
      "type": "any",
      "value": "/",
    },
  ],
}
`;

exports[`OpenAPI upgrade risk gate oas3-oauth2-flow 1`] = `
[
  {
    "authType": "oauth2",
    "bodyMode": null,
    "headerKeys": [
      "Accept",
    ],
    "id": "reportsList",
    "method": "GET",
    "name": "reports List",
    "parent": "Upgrade OAuth2",
    "pathRef": "GET::/reports",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 1,
  },
]
`;

exports[`OpenAPI upgrade risk gate oas3-oauth2-flow 2`] = `
{
  "_": {},
  "event": [],
  "info": {
    "description": {
      "content": "",
      "type": "text/plain",
    },
    "name": "Upgrade OAuth2",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": {
      "build": [],
      "major": 1,
      "minor": 0,
      "patch": 0,
      "prerelease": [],
      "raw": "<number>.<number>.<number>",
      "string": "1.0.0",
    },
  },
  "item": [
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[GET]::/reports - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "reports List",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "auth": {
          "oauth2": [
            {
              "key": "scope",
              "type": "any",
              "value": "reports:read",
            },
            {
              "key": "accessTokenUrl",
              "type": "any",
              "value": "https://auth.example.com/token",
            },
            {
              "key": "authUrl",
              "type": "any",
              "value": "https://auth.example.com/authorize",
            },
            {
              "key": "grant_type",
              "type": "any",
              "value": "authorization_code",
            },
          ],
          "type": "oauth2",
        },
        "body": {},
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "key": "Accept",
            "value": "application/json",
          },
        ],
        "method": "GET",
        "name": "reports List",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "reports",
          ],
          "query": [],
          "variable": [],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "json",
          },
          "body": "{
  "data": [
    "r1",
    "r2"
  ]
}",
          "code": 200,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/json",
            },
          ],
          "name": "ok",
          "originalRequest": {
            "body": {},
            "header": [
              {
                "description": {
                  "content": "Added as a part of security scheme: oauth2",
                  "type": "text/plain",
                },
                "key": "Authorization",
                "value": "<token>",
              },
              {
                "key": "Accept",
                "value": "application/json",
              },
            ],
            "method": "GET",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "reports",
              ],
              "query": [],
              "variable": [],
            },
          },
          "status": "OK",
        },
      ],
    },
  ],
  "variable": [
    {
      "key": "baseUrl",
      "type": "any",
      "value": "/",
    },
  ],
}
`;

exports[`OpenAPI upgrade risk gate oas3-xml-request-response 1`] = `
[
  {
    "authType": null,
    "bodyMode": "raw",
    "headerKeys": [
      "Accept",
      "Content-Type",
      "x-upgrade-gate",
    ],
    "id": "feedsCreateXml",
    "method": "POST",
    "name": "feeds Create Xml",
    "parent": "Upgrade XML",
    "pathRef": "POST::/feeds",
    "preRequestLines": 1,
    "queryParamKeys": [],
    "testLines": 1,
  },
]
`;

exports[`OpenAPI upgrade risk gate oas3-xml-request-response 2`] = `
{
  "_": {},
  "event": [],
  "info": {
    "description": {
      "content": "",
      "type": "text/plain",
    },
    "name": "Upgrade XML",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": {
      "build": [],
      "major": 1,
      "minor": 0,
      "patch": 0,
      "prerelease": [],
      "raw": "<number>.<number>.<number>",
      "string": "1.0.0",
    },
  },
  "item": [
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[POST]::/feeds - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
        {
          "listen": "prerequest",
          "script": {
            "exec": [
              "pm.collectionVariables.set('upgradeGate', 'postOperation')",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "feeds Create Xml",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {
          "mode": "raw",
          "options": {
            "raw": {
              "headerFamily": "xml",
              "language": "xml",
            },
          },
          "raw": "<?xml version="<number>.<number>" encoding="UTF-<number>"?>
<feed>
  <id>feed_1</id>
  <name>Main Feed</name>
</feed>",
        },
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "disabled": false,
            "key": "x-upgrade-gate",
            "value": "true",
          },
          {
            "key": "Accept",
            "value": "application/xml",
          },
          {
            "key": "Content-Type",
            "value": "application/xml",
          },
        ],
        "method": "POST",
        "name": "feeds Create Xml",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "feeds",
          ],
          "query": [],
          "variable": [],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "xml",
          },
          "body": "<?xml version="1.0" encoding="UTF-8"?>
<feed>
  <id>feed_1</id>
  <name>Main Feed</name>
</feed>
",
          "code": 201,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/xml",
            },
          ],
          "name": "created",
          "originalRequest": {
            "body": {
              "mode": "raw",
              "options": {
                "raw": {
                  "headerFamily": "xml",
                  "language": "xml",
                },
              },
              "raw": "<?xml version="<number>.<number>" encoding="UTF-<number>"?>
<feed>
  <id>feed_1</id>
  <name>Main Feed</name>
</feed>",
            },
            "header": [
              {
                "key": "Accept",
                "value": "application/xml",
              },
              {
                "key": "Content-Type",
                "value": "application/xml",
              },
            ],
            "method": "POST",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "feeds",
              ],
              "query": [],
              "variable": [],
            },
          },
          "status": "Created",
        },
      ],
    },
  ],
  "variable": [
    {
      "key": "baseUrl",
      "type": "any",
      "value": "/",
    },
  ],
}
`;

exports[`OpenAPI upgrade risk gate oas31-jsonschema-features 1`] = `
[
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [
      "Accept",
    ],
    "id": "eventsOne",
    "method": "GET",
    "name": "events One",
    "parent": "Upgrade OAS31 JSON Schema",
    "pathRef": "GET::/events/{id}",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 1,
  },
  {
    "authType": null,
    "bodyMode": "raw",
    "headerKeys": [
      "Content-Type",
      "x-trace-id",
      "x-upgrade-gate",
    ],
    "id": "eventsCreate",
    "method": "POST",
    "name": "events Create",
    "parent": "Upgrade OAS31 JSON Schema",
    "pathRef": "POST::/events",
    "preRequestLines": 1,
    "queryParamKeys": [],
    "testLines": 1,
  },
]
`;

exports[`OpenAPI upgrade risk gate oas31-jsonschema-features 2`] = `
{
  "_": {},
  "event": [],
  "info": {
    "description": {
      "content": "",
      "type": "text/plain",
    },
    "name": "Upgrade OAS31 JSON Schema",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": {
      "build": [],
      "major": 1,
      "minor": 0,
      "patch": 0,
      "prerelease": [],
      "raw": "<number>.<number>.<number>",
      "string": "1.0.0",
    },
  },
  "item": [
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[POST]::/events - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
        {
          "listen": "prerequest",
          "script": {
            "exec": [
              "pm.collectionVariables.set('upgradeGate', 'postOperation')",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "events Create",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {
          "mode": "raw",
          "options": {
            "raw": {
              "headerFamily": "json",
              "language": "json",
            },
          },
          "raw": {
            "internalNote": "Synthetic event for upgrade regression tests",
            "target": "primary-cta-button",
            "type": "click",
          },
        },
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "description": {
              "content": "(Required) ",
              "type": "text/plain",
            },
            "disabled": false,
            "key": "x-trace-id",
            "value": "trace-123",
          },
          {
            "disabled": false,
            "key": "x-upgrade-gate",
            "value": "true",
          },
          {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "method": "POST",
        "name": "events Create",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "events",
          ],
          "query": [],
          "variable": [],
        },
      },
      "response": [],
    },
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[GET]::/events/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "events One",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {},
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "key": "Accept",
            "value": "application/json",
          },
        ],
        "method": "GET",
        "name": "events One",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "events",
            ":id",
          ],
          "query": [],
          "variable": [
            {
              "description": {
                "content": "(Required) ",
                "type": "text/plain",
              },
              "disabled": false,
              "key": "id",
              "type": "any",
              "value": "evt_1",
            },
          ],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "json",
          },
          "body": "{
  "id": "evt_1",
  "archivedAt": null
}",
          "code": 200,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/json",
            },
          ],
          "name": "ok",
          "originalRequest": {
            "body": {},
            "header": [
              {
                "key": "Accept",
                "value": "application/json",
              },
            ],
            "method": "GET",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "events",
                ":id",
              ],
              "query": [],
              "variable": [
                {
                  "description": {
                    "content": "(Required) ",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "evt_1",
                },
              ],
            },
          },
          "status": "OK",
        },
      ],
    },
  ],
  "variable": [
    {
      "key": "baseUrl",
      "type": "any",
      "value": "/",
    },
  ],
}
`;

exports[`OpenAPI upgrade risk gate swagger2-basic 1`] = `
[
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [
      "Accept",
    ],
    "id": "widgetsList",
    "method": "GET",
    "name": "widgets List",
    "parent": "Upgrade Swagger2",
    "pathRef": "GET::/widgets",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 1,
  },
  {
    "authType": null,
    "bodyMode": null,
    "headerKeys": [
      "Accept",
    ],
    "id": "widgetsOne",
    "method": "GET",
    "name": "widgets One",
    "parent": "Upgrade Swagger2",
    "pathRef": "GET::/widgets/{id}",
    "preRequestLines": 0,
    "queryParamKeys": [],
    "testLines": 1,
  },
  {
    "authType": null,
    "bodyMode": "raw",
    "headerKeys": [
      "Accept",
      "Content-Type",
      "x-upgrade-gate",
    ],
    "id": "widgetsCreate",
    "method": "POST",
    "name": "widgets Create",
    "parent": "Upgrade Swagger2",
    "pathRef": "POST::/widgets",
    "preRequestLines": 1,
    "queryParamKeys": [],
    "testLines": 1,
  },
]
`;

exports[`OpenAPI upgrade risk gate swagger2-basic 2`] = `
{
  "_": {},
  "event": [],
  "info": {
    "description": {
      "content": "",
      "type": "text/plain",
    },
    "name": "Upgrade Swagger2",
    "schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
    "version": {
      "build": [],
      "major": 1,
      "minor": 0,
      "patch": 0,
      "prerelease": [],
      "raw": "<number>.<number>.<number>",
      "string": "1.0.0",
    },
  },
  "item": [
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[GET]::/widgets - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "widgets List",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {},
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "key": "Accept",
            "value": "application/json",
          },
        ],
        "method": "GET",
        "name": "widgets List",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "widgets",
          ],
          "query": [],
          "variable": [],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "json",
          },
          "body": "[
  {
    "id": "wid_1",
    "name": "Alpha"
  },
  {
    "id": "wid_2",
    "name": "Beta"
  }
]",
          "code": 200,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/json",
            },
          ],
          "name": "ok",
          "originalRequest": {
            "body": {},
            "header": [
              {
                "key": "Accept",
                "value": "application/json",
              },
            ],
            "method": "GET",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "widgets",
              ],
              "query": [],
              "variable": [],
            },
          },
          "status": "OK",
        },
      ],
    },
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[POST]::/widgets - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
        {
          "listen": "prerequest",
          "script": {
            "exec": [
              "pm.collectionVariables.set('upgradeGate', 'postOperation')",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "widgets Create",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {
          "mode": "raw",
          "options": {
            "raw": {
              "headerFamily": "json",
              "language": "json",
            },
          },
          "raw": {
            "name": "Gamma",
          },
        },
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "disabled": false,
            "key": "x-upgrade-gate",
            "value": "true",
          },
          {
            "key": "Accept",
            "value": "*/*",
          },
          {
            "key": "Content-Type",
            "value": "application/json",
          },
        ],
        "method": "POST",
        "name": "widgets Create",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "widgets",
          ],
          "query": [],
          "variable": [],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "json",
          },
          "body": "{
  "id": "wid_3",
  "name": "Gamma"
}",
          "code": 201,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/json",
            },
          ],
          "name": "created",
          "originalRequest": {
            "body": {
              "mode": "raw",
              "options": {
                "raw": {
                  "headerFamily": "json",
                  "language": "json",
                },
              },
              "raw": {
                "name": "Gamma",
              },
            },
            "header": [
              {
                "key": "Accept",
                "value": "*/*",
              },
              {
                "key": "Content-Type",
                "value": "application/json",
              },
            ],
            "method": "POST",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "widgets",
              ],
              "query": [],
              "variable": [],
            },
          },
          "status": "Created",
        },
      ],
    },
    {
      "event": [
        {
          "listen": "test",
          "script": {
            "exec": [
              "// Validate status 2xx 
pm.test("[GET]::/widgets/:id - Status code is 2xx", function () {
   pm.response.to.be.success;
});",
            ],
            "type": "text/javascript",
          },
        },
      ],
      "name": "widgets One",
      "protocolProfileBehavior": {
        "disableBodyPruning": true,
      },
      "request": {
        "body": {},
        "description": {
          "type": "text/plain",
        },
        "header": [
          {
            "key": "Accept",
            "value": "application/json",
          },
        ],
        "method": "GET",
        "name": "widgets One",
        "url": {
          "host": [
            "{{baseUrl}}",
          ],
          "path": [
            "widgets",
            ":id",
          ],
          "query": [],
          "variable": [
            {
              "description": {
                "content": "(Required) ",
                "type": "text/plain",
              },
              "disabled": false,
              "key": "id",
              "type": "any",
              "value": "wid_1",
            },
          ],
        },
      },
      "response": [
        {
          "_": {
            "postman_previewlanguage": "json",
          },
          "body": "{
  "id": "wid_1",
  "name": "Alpha"
}",
          "code": 200,
          "cookie": [],
          "header": [
            {
              "key": "Content-Type",
              "value": "application/json",
            },
          ],
          "name": "ok",
          "originalRequest": {
            "body": {},
            "header": [
              {
                "key": "Accept",
                "value": "application/json",
              },
            ],
            "method": "GET",
            "url": {
              "host": [
                "{{baseUrl}}",
              ],
              "path": [
                "widgets",
                ":id",
              ],
              "query": [],
              "variable": [
                {
                  "description": {
                    "content": "(Required) ",
                    "type": "text/plain",
                  },
                  "disabled": false,
                  "key": "id",
                  "type": "any",
                  "value": "wid_1",
                },
              ],
            },
          },
          "status": "OK",
        },
      ],
    },
  ],
  "variable": [
    {
      "key": "baseUrl",
      "type": "any",
      "value": "https://api.example.com/v1",
    },
  ],
}
`;
